Fix overflow bug

--- a/ESSArch_PP/frontend/static/frontend/styles/modules/reception.scss
+++ b/ESSArch_PP/frontend/static/frontend/styles/modules/reception.scss
@@ -41,7 +41,6 @@
     flex-wrap: nowrap;
     align-items: stretch;
     justify-content: flex-start;
-    position: relative;
     overflow-x: auto;
     width: 100%;
     padding: 0 0 10px 0;
